packages/css-parser/src/generated/CssParser.ts
// Generated from ../grammar/CssParser.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import CssParserListener from "./CssParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class CssParser extends Parser {
	public static readonly AND = 1;
	public static readonly OR = 2;
	public static readonly NOT = 3;
	public static readonly ONLY = 4;
	public static readonly SCREEN = 5;
	public static readonly PRINT = 6;
	public static readonly ALL = 7;
	public static readonly IMPORTANT = 8;
	public static readonly ATTRIBUTE_FLAG = 9;
	public static readonly UNSIGNED_INTEGER = 10;
	public static readonly SIGNED_INTEGER = 11;
	public static readonly UNSIGNED_NUMBER = 12;
	public static readonly SIGNED_NUMBER = 13;
	public static readonly NTH_DIMENSION = 14;
	public static readonly NTH_DIMENSION_SIGNED = 15;
	public static readonly UNSIGNED_DIMENSION = 16;
	public static readonly SIGNED_DIMENSION = 17;
	public static readonly UNSIGNED_PERCENTAGE = 18;
	public static readonly SIGNED_PERCENTAGE = 19;
	public static readonly AMPERSAND = 20;
	public static readonly COLOR_IDENT_START = 21;
	public static readonly COLOR_INT_START = 22;
	public static readonly ID = 23;
	public static readonly NTH_PSEUDO_CLASS = 24;
	public static readonly OF = 25;
	public static readonly FUNCTIONAL_PSEUDO_CLASS = 26;
	public static readonly PAGE_PSEUDO_CLASS = 27;
	public static readonly STAR = 28;
	public static readonly SLASH = 29;
	public static readonly TILDE = 30;
	public static readonly GT = 31;
	public static readonly LT = 32;
	public static readonly GTE = 33;
	public static readonly LTE = 34;
	public static readonly EQ = 35;
	public static readonly PLUS = 36;
	public static readonly MINUS = 37;
	public static readonly COLUMN = 38;
	public static readonly CARET = 39;
	public static readonly DOLLAR = 40;
	public static readonly PIPE = 41;
	public static readonly COLON = 42;
	public static readonly NTH_ODD = 43;
	public static readonly NTH_EVEN = 44;
	public static readonly SEMI = 45;
	public static readonly LCURLY = 46;
	public static readonly RCURLY = 47;
	public static readonly LPAREN = 48;
	public static readonly RPAREN = 49;
	public static readonly LSQUARE = 50;
	public static readonly RSQUARE = 51;
	public static readonly COMMA = 52;
	public static readonly DOT = 53;
	public static readonly STRING = 54;
	public static readonly CHARSET = 55;
	public static readonly IMPORT_RULE = 56;
	public static readonly NAMESPACE_RULE = 57;
	public static readonly MEDIA_RULE = 58;
	public static readonly SUPPORTS_RULE = 59;
	public static readonly PAGE_RULE = 60;
	public static readonly FONT_FACE_RULE = 61;
	public static readonly KEYFRAMES_RULE = 62;
	public static readonly CONTAINER_RULE = 63;
	public static readonly PROPERTY_RULE = 64;
	public static readonly LAYER_RULE = 65;
	public static readonly SCOPE_RULE = 66;
	public static readonly AT_RULE = 67;
	public static readonly URL_FUNCTION = 68;
	public static readonly SUPPORTS_FUNCTION = 69;
	public static readonly VAR_FUNCTION = 70;
	public static readonly CALC_FUNCTION = 71;
	public static readonly E = 72;
	public static readonly PI = 73;
	public static readonly INFINITY = 74;
	public static readonly NAN = 75;
	public static readonly CUSTOM_IDENT = 76;
	public static readonly Comment = 77;
	public static readonly WS = 78;
	public static readonly Cdo = 79;
	public static readonly Cdc = 80;
	public static readonly UnicodeBOM = 81;
	public static readonly IDENT = 82;
	public static readonly UNKNOWN = 83;
	public static readonly CUSTOM_VALUE = 84;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_stylesheet = 0;
	public static readonly RULE_main = 1;
	public static readonly RULE_qualifiedRule = 2;
	public static readonly RULE_innerQualifiedRule = 3;
	public static readonly RULE_simpleSelector = 4;
	public static readonly RULE_classSelector = 5;
	public static readonly RULE_pseudoSelector = 6;
	public static readonly RULE_nthValue = 7;
	public static readonly RULE_attributeSelector = 8;
	public static readonly RULE_compoundSelector = 9;
	public static readonly RULE_complexSelector = 10;
	public static readonly RULE_combinator = 11;
	public static readonly RULE_relativeSelector = 12;
	public static readonly RULE_forgivingSelectorList = 13;
	public static readonly RULE_selectorList = 14;
	public static readonly RULE_declarationList = 15;
	public static readonly RULE_declaration = 16;
	public static readonly RULE_valueList = 17;
	public static readonly RULE_value = 18;
	public static readonly RULE_unknownValue = 19;
	public static readonly RULE_mathSum = 20;
	public static readonly RULE_mathProduct = 21;
	public static readonly RULE_mathValue = 22;
	public static readonly RULE_mathConstant = 23;
	public static readonly RULE_function = 24;
	public static readonly RULE_integer = 25;
	public static readonly RULE_number = 26;
	public static readonly RULE_dimension = 27;
	public static readonly RULE_percentage = 28;
	public static readonly RULE_atRule = 29;
	public static readonly RULE_innerAtRule = 30;
	public static readonly RULE_mediaAtRule = 31;
	public static readonly RULE_inner_MediaAtRule = 32;
	public static readonly RULE_mediaQuery = 33;
	public static readonly RULE_mediaType = 34;
	public static readonly RULE_mediaCondition = 35;
	public static readonly RULE_mediaConditionWithoutOr = 36;
	public static readonly RULE_mediaNot = 37;
	public static readonly RULE_mediaAnd = 38;
	public static readonly RULE_mediaOr = 39;
	public static readonly RULE_mediaInParens = 40;
	public static readonly RULE_mediaFeature = 41;
	public static readonly RULE_mediaRange = 42;
	public static readonly RULE_mfNonIdentifierValue = 43;
	public static readonly RULE_mfValue = 44;
	public static readonly RULE_mfLt = 45;
	public static readonly RULE_mfGt = 46;
	public static readonly RULE_mfEq = 47;
	public static readonly RULE_mfComparison = 48;
	public static readonly RULE_generalEnclosed = 49;
	public static readonly RULE_ratio = 50;
	public static readonly RULE_pageAtRule = 51;
	public static readonly RULE_inner_PageAtRule = 52;
	public static readonly RULE_fontFaceAtRule = 53;
	public static readonly RULE_supportsAtRule = 54;
	public static readonly RULE_supportsCondition = 55;
	public static readonly RULE_supportsInParens = 56;
	public static readonly RULE_importAtRule = 57;
	public static readonly RULE_unknownAtRule = 58;
	public static readonly RULE_identifier = 59;
	public static readonly RULE_anyOuterValue = 60;
	public static readonly RULE_anyInnerValue = 61;
	public static readonly literalNames: (string | null)[] = [ null, "'and'", 
                                                            "'or'", "'not'", 
                                                            "'only'", "'screen'", 
                                                            "'print'", "'all'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "'&'", null, 
                                                            null, null, 
                                                            null, "'of'", 
                                                            null, null, 
                                                            "'*'", "'/'", 
                                                            "'~'", "'>'", 
                                                            "'<'", "'>='", 
                                                            "'<='", "'='", 
                                                            "'+'", "'-'", 
                                                            "'||'", "'^'", 
                                                            "'$'", "'|'", 
                                                            "':'", "'odd'", 
                                                            "'even'", "';'", 
                                                            "'{'", "'}'", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "','", "'.'", 
                                                            null, null, 
                                                            "'@import'", 
                                                            "'@namespace'", 
                                                            "'@media'", 
                                                            "'@supports'", 
                                                            "'@page'", "'@font-face'", 
                                                            null, "'@container'", 
                                                            "'@property'", 
                                                            "'@layer'", 
                                                            "'@scope'", 
                                                            null, null, 
                                                            "'supports'", 
                                                            "'var'", "'calc'", 
                                                            "'e'", "'pi'", 
                                                            "'infinity'", 
                                                            "'nan'", null, 
                                                            null, null, 
                                                            "'<!--'", "'-->'", 
                                                            "'\\uFFFE'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "AND", 
                                                             "OR", "NOT", 
                                                             "ONLY", "SCREEN", 
                                                             "PRINT", "ALL", 
                                                             "IMPORTANT", 
                                                             "ATTRIBUTE_FLAG", 
                                                             "UNSIGNED_INTEGER", 
                                                             "SIGNED_INTEGER", 
                                                             "UNSIGNED_NUMBER", 
                                                             "SIGNED_NUMBER", 
                                                             "NTH_DIMENSION", 
                                                             "NTH_DIMENSION_SIGNED", 
                                                             "UNSIGNED_DIMENSION", 
                                                             "SIGNED_DIMENSION", 
                                                             "UNSIGNED_PERCENTAGE", 
                                                             "SIGNED_PERCENTAGE", 
                                                             "AMPERSAND", 
                                                             "COLOR_IDENT_START", 
                                                             "COLOR_INT_START", 
                                                             "ID", "NTH_PSEUDO_CLASS", 
                                                             "OF", "FUNCTIONAL_PSEUDO_CLASS", 
                                                             "PAGE_PSEUDO_CLASS", 
                                                             "STAR", "SLASH", 
                                                             "TILDE", "GT", 
                                                             "LT", "GTE", 
                                                             "LTE", "EQ", 
                                                             "PLUS", "MINUS", 
                                                             "COLUMN", "CARET", 
                                                             "DOLLAR", "PIPE", 
                                                             "COLON", "NTH_ODD", 
                                                             "NTH_EVEN", 
                                                             "SEMI", "LCURLY", 
                                                             "RCURLY", "LPAREN", 
                                                             "RPAREN", "LSQUARE", 
                                                             "RSQUARE", 
                                                             "COMMA", "DOT", 
                                                             "STRING", "CHARSET", 
                                                             "IMPORT_RULE", 
                                                             "NAMESPACE_RULE", 
                                                             "MEDIA_RULE", 
                                                             "SUPPORTS_RULE", 
                                                             "PAGE_RULE", 
                                                             "FONT_FACE_RULE", 
                                                             "KEYFRAMES_RULE", 
                                                             "CONTAINER_RULE", 
                                                             "PROPERTY_RULE", 
                                                             "LAYER_RULE", 
                                                             "SCOPE_RULE", 
                                                             "AT_RULE", 
                                                             "URL_FUNCTION", 
                                                             "SUPPORTS_FUNCTION", 
                                                             "VAR_FUNCTION", 
                                                             "CALC_FUNCTION", 
                                                             "E", "PI", 
                                                             "INFINITY", 
                                                             "NAN", "CUSTOM_IDENT", 
                                                             "Comment", 
                                                             "WS", "Cdo", 
                                                             "Cdc", "UnicodeBOM", 
                                                             "IDENT", "UNKNOWN", 
                                                             "CUSTOM_VALUE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"stylesheet", "main", "qualifiedRule", "innerQualifiedRule", "simpleSelector", 
		"classSelector", "pseudoSelector", "nthValue", "attributeSelector", "compoundSelector", 
		"complexSelector", "combinator", "relativeSelector", "forgivingSelectorList", 
		"selectorList", "declarationList", "declaration", "valueList", "value", 
		"unknownValue", "mathSum", "mathProduct", "mathValue", "mathConstant", 
		"function", "integer", "number", "dimension", "percentage", "atRule", 
		"innerAtRule", "mediaAtRule", "inner_MediaAtRule", "mediaQuery", "mediaType", 
		"mediaCondition", "mediaConditionWithoutOr", "mediaNot", "mediaAnd", "mediaOr", 
		"mediaInParens", "mediaFeature", "mediaRange", "mfNonIdentifierValue", 
		"mfValue", "mfLt", "mfGt", "mfEq", "mfComparison", "generalEnclosed", 
		"ratio", "pageAtRule", "inner_PageAtRule", "fontFaceAtRule", "supportsAtRule", 
		"supportsCondition", "supportsInParens", "importAtRule", "unknownAtRule", 
		"identifier", "anyOuterValue", "anyInnerValue",
	];
	public get grammarFileName(): string { return "CssParser.g4"; }
	public get literalNames(): (string | null)[] { return CssParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return CssParser.symbolicNames; }
	public get ruleNames(): string[] { return CssParser.ruleNames; }
	public get serializedATN(): number[] { return CssParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, CssParser._ATN, CssParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public stylesheet(): StylesheetContext {
		let localctx: StylesheetContext = new StylesheetContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, CssParser.RULE_stylesheet);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===55) {
				{
				this.state = 124;
				this.match(CssParser.CHARSET);
				}
			}

			this.state = 127;
			this.main();
			this.state = 128;
			this.match(CssParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public main(): MainContext {
		let localctx: MainContext = new MainContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, CssParser.RULE_main);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 397411070) !== 0) || ((((_la - 42)) & ~0x1F) === 0 && ((1 << (_la - 42)) & 3255781633) !== 0) || ((((_la - 74)) & ~0x1F) === 0 && ((1 << (_la - 74)) & 275) !== 0)) {
				{
				this.state = 133;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 78:
					{
					this.state = 130;
					this.match(CssParser.WS);
					}
					break;
				case 1:
				case 2:
				case 3:
				case 4:
				case 5:
				case 6:
				case 7:
				case 9:
				case 20:
				case 21:
				case 23:
				case 24:
				case 25:
				case 26:
				case 28:
				case 42:
				case 50:
				case 53:
				case 72:
				case 73:
				case 74:
				case 75:
				case 82:
					{
					this.state = 131;
					this.qualifiedRule();
					}
					break;
				case 56:
				case 58:
				case 59:
				case 60:
				case 61:
				case 67:
					{
					this.state = 132;
					this.atRule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 137;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public qualifiedRule(): QualifiedRuleContext {
		let localctx: QualifiedRuleContext = new QualifiedRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, CssParser.RULE_qualifiedRule);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 138;
			this.selectorList();
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===78) {
				{
				{
				this.state = 139;
				this.match(CssParser.WS);
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 145;
			this.match(CssParser.LCURLY);
			this.state = 146;
			this.declarationList();
			this.state = 147;
			this.match(CssParser.RCURLY);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public innerQualifiedRule(): InnerQualifiedRuleContext {
		let localctx: InnerQualifiedRuleContext = new InnerQualifiedRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, CssParser.RULE_innerQualifiedRule);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this.forgivingSelectorList();
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===78) {
				{
				{
				this.state = 150;
				this.match(CssParser.WS);
				}
				}
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 156;
			this.match(CssParser.LCURLY);
			this.state = 157;
			this.declarationList();
			this.state = 158;
			this.match(CssParser.RCURLY);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public simpleSelector(): SimpleSelectorContext {
		let localctx: SimpleSelectorContext = new SimpleSelectorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, CssParser.RULE_simpleSelector);
		try {
			this.state = 168;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 53:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 160;
				this.classSelector();
				}
				break;
			case 23:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 161;
				this.match(CssParser.ID);
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 162;
				this.match(CssParser.COLOR_IDENT_START);
				}
				break;
			case 1:
			case 2:
			case 3:
			case 4:
			case 5:
			case 6:
			case 7:
			case 9:
			case 25:
			case 72:
			case 73:
			case 74:
			case 75:
			case 82:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 163;
				this.identifier();
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 164;
				this.match(CssParser.AMPERSAND);
				}
				break;
			case 28:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 165;
				this.match(CssParser.STAR);
				}
				break;
			case 24:
			case 26:
			case 42:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 166;
				this.pseudoSelector();
				}
				break;
			case 50:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 167;
				this.attributeSelector();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public classSelector(): ClassSelectorContext {
		let localctx: ClassSelectorContext = new ClassSelectorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, CssParser.RULE_classSelector);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 170;
			this.match(CssParser.DOT);
			this.state = 171;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pseudoSelector(): PseudoSelectorContext {
		let localctx: PseudoSelectorContext = new PseudoSelectorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, CssParser.RULE_pseudoSelector);
		let _la: number;
		try {
			let _alt: number;
			this.state = 222;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 173;
				this.match(CssParser.NTH_PSEUDO_CLASS);
				this.state = 174;
				this.match(CssParser.LPAREN);
				this.state = 178;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 175;
						this.match(CssParser.WS);
						}
						}
					}
					this.state = 180;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				}
				this.state = 181;
				this.nthValue();
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===78) {
					{
					{
					this.state = 182;
					this.match(CssParser.WS);
					}
					}
					this.state = 187;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 188;
